[package]
name = "my-azure-page-blob-random-access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-azure-storage-sdk = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-azure-storage.git" }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
